samples/_failures_safe/1761658204_491ab7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e4a40ee.c: In function ‘main’:
./samples/SAFE/__tmp_5e4a40ee.c:159:21: error: expected declaration or statement at end of input
  159 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_5e4a40ee.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e4a40ee.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e4a40ee.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5e4a40ee.c:159:21: error: expected declaration or statement at end of input
